List columns, list-inline and list-block responsive helpers added.
 Changes to be committed:
	modified:   README.md
	modified:   changelog.md
	modified:   dist/gosp.css
	modified:   dist/gosp.css.map
	modified:   dist/gosp.min.css
	modified:   dist/gosp.min.css.map
	modified:   src/util/_config.scss
	modified:   src/util/_mixins.scss
	modified:   src/util/helpers/_list.scss

--- a/src/util/_config.scss
+++ b/src/util/_config.scss
@@ -1,4 +1,4 @@
-$gosp-version: "1.0.8";
+$gosp-version: "1.0.9";
 $gosp-responsive: true;
 $gosp-grid-type: 'flex'; // flex | float | inline
 $gosp-grid-columns: 12;
@@ -30,6 +30,8 @@ $gosp-breakpoints: (
 		min: em(1601px)
 	)
 );
+
+$gosp-media-queries: xs, sm, sm-up, sm-down, md, md-up, md-down, lg, lg-up, lg-down, xl;
 
 $gosp-font-family-sans-serif:  "Helvetica Neue", Helvetica, Arial, sans-serif;
 $gosp-font-family-serif:       Georgia, "Times New Roman", Times, serif;
