Restored `list-reset` class
 Changes to be committed:
	modified:   README.md
	modified:   changelog.md
	modified:   dist/gosp.css
	modified:   dist/gosp.css.map
	modified:   dist/gosp.min.css
	modified:   dist/gosp.min.css.map
	modified:   package.json
	modified:   src/util/_config.scss
	modified:   src/util/helpers/_list.scss

--- a/src/util/helpers/_list.scss
+++ b/src/util/helpers/_list.scss
@@ -2,6 +2,14 @@
 	list-style: none;
 }
 
+.list {
+	&-reset {
+		@extend .lsn;
+		margin: 0;
+		padding: 0;
+	}
+}
+
 @include list-helper();
 
 @for $x from 1 through ($gosp-grid-columns / 2) {
