Added conditional to add padding if gutter is higher than 0px
 Changes to be committed:
	modified:   package.json
	modified:   src/util/_config.scss
	modified:   src/util/_grid.scss

--- a/src/util/_grid.scss
+++ b/src/util/_grid.scss
@@ -58,9 +58,11 @@
 				
 [class*="col-"] {	
 	width: 100%;
-	padding: {
-		right: $gosp-grid-column-gutter;
-		left: $gosp-grid-column-gutter;
+	@if ($gosp-grid-column-gutter > 0) {
+		padding: {
+			right: $gosp-grid-column-gutter;
+			left: $gosp-grid-column-gutter;
+		}
 	}
 	
 	@if isFlex() {
