--- a/src/core/mixins/_media-queries-helpers.scss
+++ b/src/core/mixins/_media-queries-helpers.scss
@@ -1,4 +1,7 @@
-@import "mixins";
+@import "aux";
+@import "classes";
+@import "media-queries";
+@import "responsive";
 
 @include responsive-helpers(xs);
 @include center-box(xs);
